# cs2-breakout-game

./: .gitignore  Ball.cpp  Ball.h  Block.cpp  Block.h  BreakoutGame.cpp  BreakoutGame.h  CMakeLists.txt  Collision.cpp  Collision.h  Common.h  Paddle.cpp  Paddle.h  Physics.cpp  Physics.h  README.md  Wall.cpp  Wall.h  main.cpp
game/: Ball.cpp  Ball.h  Block.cpp  Block.h  BreakoutGame.cpp  BreakoutGame.h  Collision.cpp  Collision.h  Paddle.cpp  Paddle.h  Physics.cpp  Physics.h  Wall.cpp  Wall.h
menu/: CreditsString.h  Menu.cpp  Menu.h  ScoreBoard.cpp  ScoreBoard.h  TextList.cpp  TextList.h
